spacing fixed

--- a/src/sass/components/_accordion.scss
+++ b/src/sass/components/_accordion.scss
@@ -68,5 +68,5 @@
 }
 
 .accordion__content p {
-  padding-block-start: 1em;
+  padding-block-start: $card-gap;
 }
